Implemented the Third Party Connection Request by API in Android Application. Implemented the Third Party Package Checking by API in Android Application. Implemented the Third Party Accept Connection Request by API in Android Application. Implemented Accept Connection Dialog for SSID Third Party Login to accept the Connection.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CaymanSSIDLib</string>
+    <string name="app_key">Dvyaw9pUECWZxg32ASibMsJ6vX8NKFQKH8V572wF4mWTac0dZoLjxgVblPNoJ6zi</string>
 </resources>
